Content changes and elim screens

--- a/app/views/layinghens/current/eligibility/features/concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/features/concrete-apron.html
@@ -51,8 +51,6 @@
                 ]
             }) }}
 
-                
-
                 {{ govukButton ({
                     html: 'Continue'
                 }) }}
@@ -67,7 +65,7 @@
                 <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
-                <p>You must be able to remove eggs and deliver empty egg trays to and from the building's egg store without going into the building's entrance lobby or connected cleaning area.</p>
+                <p>The hen housing and any barn system veranda areas must be surrounded by a continuous concrete apron (a hardstanding concrete area).</p>
                 <a href="#">
                 </a>
             </div>
