--- a/app/views/layinghens/current/eligibility/features/pop-holes.html
+++ b/app/views/layinghens/current/eligibility/features/pop-holes.html
@@ -24,7 +24,7 @@
                         }
                     },
                     hint: {
-                        text: 'You must not put perches in front of the pop holes '
+                        text: 'You must not put perches in front of the pop holes'
                     },
                     items: [
                         {
@@ -61,12 +61,26 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
 
-                <p>Pop holes must:</p>
+                <p>
+                Pop holes must:
+                </p>
+
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
                         be atleast 35cm high and 40cm wide
                     </li>
+
+                    <li>
+                        extend along the entire length of the building
+                    </li>
                 </ul>
+
+                <p>
+                The pop hole openings must add up to a total of 2 metres for every 1,000 hens.
+                </p>
+                <p>
+                The base of all pop holes must either be less than 30cm from floor level, or have access ramps that are as wide as the pop holes.
+                </p>
 
             </div>
 
