--- a/app/views/layinghens/current/eligibility/features/external-taps.html
+++ b/app/views/layinghens/current/eligibility/features/external-taps.html
@@ -25,7 +25,7 @@
                         legend: {
                             text: 'Will the ' + poultryType + ' housing have an external tap at each main pedestrian access point?',
                             isPageHeading: true,
-                            classes: 'govuk-fieldset__legend--xl'
+                            classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     
@@ -55,6 +55,16 @@
 
             </form>
 
+        </div>
+
+        <div class="govuk-grid-column-one-third">
+
+            <div class="app-step-nav-related app-step-nav-related--singular">
+                <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                </h2>
+                <p>There must be an external tap to manage external footbaths at every pedestrian access point to the housing.</p>
+            </div>
         </div>
 
 </div>
