Updates to content in scoring journey

--- a/app/views/layinghens/current/scoring/dark-brooders.html
+++ b/app/views/layinghens/current/scoring/dark-brooders.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will all roof and wall inlets and outlets be capped with mesh that has a spacing of 6 millimetres (mm) or less?
+    Will the multi-tier system have 3 tiers or fewer directly above each other?
 {% endblock %}
 
 {% block content %}
@@ -15,35 +15,32 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form method="post">
+            <form action="results">
 
                 {{ govukRadios ({
-                    idPrefix: 'biosecurity',
-                    name: 'biosecurity',
+                    idPrefix: 'scoring-dark-brooders',
+                    name: 'scoring-dark-brooders',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will all roof and wall inlets and outlets be capped with mesh that has a spacing of 25 millimetres (mm) or less?',
+                            text: 'Will the housing include dark brooders?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
+                    },
+                    hint: {
+                        text: 'A suspended horizontal heat source enclosed by a curtain to exclude light'
                     },
                     items: [
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['biosecurity'] == 'Yes',
-                            attributes: {
-                                    'data-next': 'insulation'
-                                }
+                            checked: true if data['scoring-dark-brooders'] == 'Yes'
                         },
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['biosecurity'] == 'No',
-                            attributes: {
-                                    'data-next': 'elim-biosecurity'
-                                }
+                            checked: true if data['scoring-dark-brooders'] == 'No'
                         }
                     ]
                 }) }}
@@ -56,15 +53,14 @@
 
         </div>
 
-
         <div class="govuk-grid-column-one-third">
 
             <div class="app-step-nav-related app-step-nav-related--singular">
                 <h2 class="app-step-nav-related__heading">
-                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    The housing must have roof and wall inlets and outlets that are capped with mesh that has a spacing (aperture) of 25mm or less.
+                    RPA want to fund pullet housing that has dark brooders.
                 </p>
             </div>
 
