Updates to content

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,7 +35,7 @@
       <td class="govuk-table__cell"><a href="layinghens" class="govuk-lik govuk-link--no-visited-state">Laying hens grant</a>
         </td>
 
-      <td class="govuk-table__cell">Checker (R1 version 1, last updated on 27 December 2023)</td>
+      <td class="govuk-table__cell">Checker (R1, last updated on 22 January 2024)</td>
 
     </tr>
 
