--- a/app/views/layinghens/current/eligibility/solar/project-cost-total.html
+++ b/app/views/layinghens/current/eligibility/solar/project-cost-total.html
@@ -48,7 +48,8 @@
                         html: hintHtml
                     },
                     label: {
-                        text: 'Total estimated project cost'
+                        text: 'Total estimated project cost',
+                        classes: 'govuk-visually-hidden'
                     }
                 }) }}
 
