--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -19,7 +19,7 @@
                     </p>
 
                     <p class="govuk-hint"> 
-                    Your roof is exempt if:
+                        Your roof is exempt if:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
@@ -74,7 +74,7 @@
                             value: 'Exempt',
                             checked: true if data['roof-support-for-solar-pv'] == 'Exempt',
                             attributes: {
-                                    'data-next': 'solar-pv-system'
+                                    'data-next': 'project-cost-total'
                                 }
                         }
                     ]
