--- a/app/views/layinghens/current/eligibility/ventilation/elim-rate.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-rate.html
@@ -21,11 +21,11 @@
 
                 {% if poultryType == 'hen' %}
                     <p>
-                        The housing ventilation must have a ventilation rate of 10,800m3 per hour per 1000 hens.
+                        The housing ventilation must have a ventilation rate of 10,800m<sup>3</sup> per hour per 1000 hens.
                     </p>
                 {% else %}
                     <p>
-                        The housing ventilation must have a ventilation rate of 9,000m3 per hour per 1000 pullets.
+                        The housing ventilation must have a ventilation rate of 9,000m<sup>3</sup> per hour per 1000 pullets.
                     </p>
                 {% endif %}
                
