--- a/app/views/layinghens/current/eligibility/ventilation/features.html
+++ b/app/views/layinghens/current/eligibility/ventilation/features.html
@@ -25,7 +25,7 @@
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            a control system to automatically measure and record the daily temperature, humidity, and CO2 levels
+                            a control system to automatically measure and record the daily temperature, humidity, and CO<sub>2</sub> levels
                         </li>
                         <li>
                             an alarm system (that detects excessive high or low temperatures and system failures) with a power supply independent of mains electricity
