--- a/app/views/layinghens/current/eligibility/veranda/features.html
+++ b/app/views/layinghens/current/eligibility/veranda/features.html
@@ -55,7 +55,7 @@
                             value: 'Exempt',
                             checked: true if data['veranda-features'] == 'Exempt',
                             attributes: {
-                                    'data-next': '../features/pop-holes'
+                                    'data-next': '../features/concrete-apron'
                                 }
                         }
                     ]
