--- a/app/views/layinghens/current/eligibility/veranda/pop-holes.html
+++ b/app/views/layinghens/current/eligibility/veranda/pop-holes.html
@@ -37,7 +37,7 @@
                             value: 'Yes',
                             checked: true if data['pop-holes'] == 'Yes',
                             attributes: {
-                                'data-next': 'concrete-apron'
+                                'data-next': '../features/concrete-apron'
                             }
                         },
                         {
