--- a/app/views/layinghens/current/views/layouts/layout.html
+++ b/app/views/layinghens/current/views/layouts/layout.html
@@ -31,4 +31,25 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 
 {% endblock %}
 
+{% block footer %}
+    {{ govukFooter({
+        meta: {
+            items: [
+                {
+                    text: "Give feedback",
+                    href: "#"
+                },
+                {
+                    text: "Manage prototype",
+                    href: "/manage-prototype"
+                },
+                {
+                    text: "Clear data",
+                    href: "/clear-data"
+                }
+            ]
+        }
+    }) }}
+{% endblock %}
+
 
