--- a/app/views/layinghens/current/start.html
+++ b/app/views/layinghens/current/start.html
@@ -11,20 +11,14 @@
 
 {% block beforeContent %}
 
-  {{ govukBreadcrumbs({
-    items: [
-      {
-        text: "Home",
-        href: "#"
-      },
-      {
-        text: "Section",
-        href: "#"
-      },
-      {
-        text: "Subsection"
-      }
-    ]
+{{ super() }}
+
+ {{ govukPhaseBanner({
+    tag: {
+    text: "Prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
 {% endblock %}
@@ -38,15 +32,89 @@
         {{ serviceName }}
       </h1>
 
-      <p>Use this service to:</p>
+      <p>
+        Use this service to:
+      </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>do something</li>
-        <li>update your name, address or other details</li>
-        <li>do something else</li>
+        <li>
+          check if you are eligible to apply for a grant for your project (takes about 5 minutes)
+        </li>
+        <li>
+          check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)
+        </li>
       </ul>
 
-      <p>Registering takes around 5 minutes.</p>
+      <h2 class="govuk-heading-m">
+        Who can apply
+      </h2>
+
+      <p>
+        You can apply if you:
+      </p>
+        
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          are a laying hen or pullet farmer
+        </li>
+        <li>
+          will do the grant-funded work in England
+        </li>
+      </ul>
+
+      <h2 class="govuk-heading-m">
+        What you can apply for
+      </h2>
+
+      <p>
+        You can apply for grant funding to replace or refurbish existing laying hen or pullet housing, or to add a veranda to laying hen or pullet housing.
+      </p>
+
+      <p>
+        If you are applying for grant funding to replace or refurbish housing, you can also apply for grant funding to add a solar photovoltaic (PV) system to the housing.
+      </p>
+      
+      <p>
+        You must submit an application for each project. You can apply for grant funding for either housing projects or veranda projects.
+      </p>
+
+      <p>
+        You can apply for up to 40% of estimated costs of:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          replacing or refurbishing laying hen or pullet housing
+        </li>
+        <li>
+          adding a veranda to existing housing
+        </li>
+      </ul>
+
+      <p>
+        Funding for a solar PV system will be capped at the lowest of these 2 amounts, either:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          the cost of 75m<sup>2</sup> of the bird floorspace or
+        </li>
+        <li>
+          25% of the invoice price for purchase and installation of the solar PV system
+        </li>
+      </ul>
+
+      <p>
+        For laying hen or pullet housing and a solar PV system, the maximum grant you can apply for is £500,000. The minimum grant is £15,000 (40% of £37,000).
+      </p>
+
+      <p>
+        For adding a laying hen or pullet veranda only, the maximum grant you can apply for is £80,000. The minimum grant is £15,000 (40% of £37,000). The RPA will award the grant funding for verandas on a first-come first- served basis.
+      </p>
+
+      {{ govukInsetText ({
+        text: 'If your project is eligible, you will be able to submit your online application to the Rural Payments Agency (RPA).'
+      }) }}
 
       {{ govukButton({
         text: "Start now",
@@ -59,47 +127,66 @@
       </h2>
 
       <p>
-        You can also <a href="#">register by post</a>.
+        To  use the checker, you need:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          information about your business (for example, number of employees, turnover)
+        </li>
+        <li>
+          information about the project (for example, building structure)
+        </li>
+        <li>
+          a list of the items you’d like to buy for the project
+        </li>
+        <li>
+          an estimate of the total cost of the items
+        </li>
+      </ul>
+
+      <p>
+        If you do not enter any information for more than 20 minutes, your application will time out and you  will have to start again. 
+      </p>
+
+      <h2 class="govuk-heading-m">
+        Problems  using  the  online  service
+      </h2>
+
+      <p>
+        If you have any problems  using the online  service, call the RPA and follow the options for the Farming Transformation Fund scheme.
+      </p>
+
+      <h3 class="govuk-heading-s">
+        Telelephone
+      </h3>
+
+      <p>
+        Telephone: 03000 200 301
       </p>
 
       <p>
-        The online service is also <a href="#">available in Welsh (ar gael yn Gymraeg)</a>.
+        Monday to Friday, 9am to 5pm (except public holidays)
       </p>
 
       <p>
-        You can’t register for this service if you’re in the UK illegally.
+        <a href="#">
+          Find out about call charges
+        </a>
+      </p>
+
+      <h3 class="govuk-heading-s">
+        Email
+      </h3>
+
+      <p>
+        <a href="mailto:FTF@rpa.gov.uk">
+          FTF@rpa.gov.uk
+        </a>
       </p>
 
     </div>
 
-    <div class="govuk-grid-column-one-third">
-
-      <aside class="govuk-prototype-kit-common-templates-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Subsection
-        </h2>
-        <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="govuk-list govuk-!-font-size-16">
-            <li>
-              <a href="#">
-                Related link
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Related link
-              </a>
-            </li>
-            <li>
-              <a href="#" class="govuk-!-font-weight-bold">
-                More <span class="govuk-visually-hidden">in Subsection</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </aside>
-
-    </div>
   </div>
 
 {% endblock %}
