changes to content based on mural

--- a/app/views/layinghens/current/poultry-type.html
+++ b/app/views/layinghens/current/poultry-type.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    What type of poultry is the project for?
+    Which type of poultry is the project for?
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
                     name: 'poultry-type',
                     fieldset: {
                         legend: {
-                            text: 'What type of poultry is the project for?',
+                            text: 'Which type of poultry is the project for?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
