--- a/app/views/layinghens/current/project-type.html
+++ b/app/views/layinghens/current/project-type.html
@@ -39,7 +39,7 @@
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
-                    hint{
+                    hint: {
                         html: hintHtml
                     },
                     items: [
