--- a/app/views/layinghens/current/scoring/natural-light.html
+++ b/app/views/layinghens/current/scoring/natural-light.html
@@ -28,6 +28,9 @@
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
+                    hint: {
+                        text: 'The windows in the housing must be fitted with an insulated blind and be equal to at least 3% of size of the bird space footprint'
+                    },
                     items: [
                         {
                             text: 'Yes',
