--- a/app/views/layinghens/current/views/layouts/layout.html
+++ b/app/views/layinghens/current/views/layouts/layout.html
@@ -37,7 +37,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
             items: [
                 {
                     text: "Give feedback",
-                    href: "#"
+                    href: "/layinghens/user-testing/likert-scale"
                 },
                 {
                     text: "Manage prototype",
