--- a/app/views/layinghens/current/hen-insulation.html
+++ b/app/views/layinghens/current/hen-insulation.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the hen housing have full wall and roof insulation, with a U-Value of less than 0.3W/m2/°C?
