--- a/app/views/layinghens/current/hen-manure-removal.html
+++ b/app/views/layinghens/current/hen-manure-removal.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the aviary system automatically remove manure?
