--- a/app/views/layinghens/current/hen-ventilation-features.html
+++ b/app/views/layinghens/current/hen-ventilation-features.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the hen housing have a mechanical ventilation system with the following? 
