--- a/app/views/layinghens/current/hen-ventilation-rate.html
+++ b/app/views/layinghens/current/hen-ventilation-rate.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the ventilation system be able to provide a ventilation rate (MXVR) of 10,800m3 per hour per 1000 birds? 
