--- a/app/views/layinghens/current/hen-veranda-biosecurity.html
+++ b/app/views/layinghens/current/hen-veranda-biosecurity.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the veranda have the capacity to be made biosecure with mesh that has a spacing of 6mm or less?
