--- a/app/views/layinghens/current/hen-veranda-size.html
+++ b/app/views/layinghens/current/hen-veranda-size.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the housing have a veranda that is at least the same size as 30% of the indoor bird housing area footprint?
