--- a/app/views/layinghens/current/hen-and-pullet-project-cost.html
+++ b/app/views/layinghens/current/hen-and-pullet-project-cost.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Hen and Pullet Project Cost – {{ serviceName }} – GOV.UK Prototype Kit
