--- a/app/views/layinghens/current/hen-aviary-system.html
+++ b/app/views/layinghens/current/hen-aviary-system.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the housing have a laying hen aviary system?
