--- a/app/views/layinghens/current/hen-led-lighting.html
+++ b/app/views/layinghens/current/hen-led-lighting.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the housing lighting system have integrated and fully-adjustable LEDs?
