--- a/app/views/layinghens/current/hen-lighting-features.html
+++ b/app/views/layinghens/current/hen-lighting-features.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the hen house lighting system have these features? 
