--- a/app/views/layinghens/current/hen-roof-support.html
+++ b/app/views/layinghens/current/hen-roof-support.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Roof Support For Solar PV – {{ serviceName }} – GOV.UK Prototype Kit
