--- a/app/views/layinghens/current/hen-vehicle-washing.html
+++ b/app/views/layinghens/current/hen-vehicle-washing.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Hen Vehicle Washing Area – {{ serviceName }} – GOV.UK Prototype Kit
