--- a/app/views/layinghens/current/hen-ventilation-quality.html
+++ b/app/views/layinghens/current/hen-ventilation-quality.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Will the ventilation maintain the required air quality parameters?
