--- a/app/views/layinghens/current/pullet-bird-data.html
+++ b/app/views/layinghens/current/pullet-bird-data.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Separate Air Space – {{ serviceName }} – GOV.UK Prototype Kit
