--- a/app/views/layinghens/current/pullet-environmental-data-type.html
+++ b/app/views/layinghens/current/pullet-environmental-data-type.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Bird Data Type – {{ serviceName }} – GOV.UK Prototype Kit
