--- a/app/views/layinghens/current/pullet-highest-tier.html
+++ b/app/views/layinghens/current/pullet-highest-tier.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Height of Highest Tier – {{ serviceName }} – GOV.UK Prototype Kit
